--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,8 @@ dependencies {
     compile 'com.android.support:design:24.0.0'
     compile 'com.firebase:firebase-client-android:2.3.1'
     compile 'com.firebaseui:firebase-ui:0.3.1'
+
+    /* For Google Play Services */
+    compile 'com.google.android.gms:play-services-safetynet:8.3.0'
+    compile 'com.google.android.gms:play-services-auth:8.3.0'
 }
